# api/docs/swagger.json
@@ -10,6 +10,11 @@
     "paths": {
         "/v1/comment/create": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create Comment",
                 "consumes": [
                     "application/json"
@@ -56,6 +61,11 @@
         },
         "/v1/comment/owner/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all comments by owner id",
                 "consumes": [
                     "application/json"
@@ -70,7 +80,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "owne_id",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -100,6 +110,11 @@
         },
         "/v1/comment/post/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get all comments by post id",
                 "consumes": [
                     "application/json"
@@ -114,7 +129,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "post_id",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -144,6 +159,11 @@
         },
         "/v1/like/comment": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Like comment",
                 "consumes": [
                     "application/json"
@@ -189,7 +209,12 @@
             }
         },
         "/v1/like/comment/{id}": {
-            "post": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Like owners by comment id",
                 "consumes": [
                     "application/json"
@@ -204,7 +229,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "comment_id",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -234,6 +259,11 @@
         },
         "/v1/like/post": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Like post",
                 "consumes": [
                     "application/json"
@@ -279,7 +309,12 @@
             }
         },
         "/v1/like/post/{id}": {
-            "post": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Like owners by post id",
                 "consumes": [
                     "application/json"
@@ -294,7 +329,7 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "post_id",
+                        "description": "id",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -324,6 +359,11 @@
         },
         "/v1/post/create": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create Post",
                 "consumes": [
                     "application/json"
@@ -370,6 +410,11 @@
         },
         "/v1/post/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete Post",
                 "consumes": [
                     "application/json"
@@ -414,6 +459,11 @@
         },
         "/v1/post/get/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get Post",
                 "consumes": [
                     "application/json"
@@ -458,6 +508,11 @@
         },
         "/v1/post/owner/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get Posts by owner id",
                 "consumes": [
                     "application/json"
@@ -502,6 +557,11 @@
         },
         "/v1/post/update": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update Post",
                 "consumes": [
                     "application/json"
@@ -548,6 +608,11 @@
         },
         "/v1/user/create": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create a new user with the provided details",
                 "consumes": [
                     "application/json"
@@ -594,6 +659,11 @@
         },
         "/v1/user/delete/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Delete user",
                 "consumes": [
                     "application/json"
@@ -636,8 +706,99 @@
                 }
             }
         },
+        "/v1/user/login": {
+            "post": {
+                "description": "Login",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "login user",
+                "parameters": [
+                    {
+                        "description": "Login",
+                        "name": "User",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/user/register": {
+            "post": {
+                "description": "Register a new user with the provided details",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "register user",
+                "parameters": [
+                    {
+                        "description": "Register user",
+                        "name": "UserInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.RegisterRespUser"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/user/update": {
             "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Update user",
                 "consumes": [
                     "application/json"
@@ -682,8 +843,55 @@
                 }
             }
         },
+        "/v1/user/verify/{email}/{code}": {
+            "get": {
+                "description": "Verify a user with code sent to their email",
+                "consumes": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "verify user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "code",
+                        "name": "code",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/models.VerifyResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Get user",
                 "consumes": [
                     "application/json"
@@ -728,6 +936,11 @@
         },
         "/v1/users": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get all users",
                 "consumes": [
                     "application/json"
@@ -797,9 +1010,6 @@
                 "comment_id": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "string"
-                },
                 "user_id": {
                     "type": "string"
                 }
@@ -813,6 +1023,34 @@
                     "items": {
                         "$ref": "#/definitions/models.Comment"
                     }
+                }
+            }
+        },
+        "models.LoginRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
                 }
             }
         },
@@ -836,9 +1074,6 @@
         "models.PostLike": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "string"
-                },
                 "post_id": {
                     "type": "string"
                 },
@@ -855,6 +1090,14 @@
                     "items": {
                         "$ref": "#/definitions/models.Post"
                     }
+                }
+            }
+        },
+        "models.RegisterRespUser": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
@@ -947,6 +1190,9 @@
                 "age": {
                     "type": "integer"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "first_name": {
                     "type": "string"
                 },
@@ -957,6 +1203,9 @@
                     "type": "string"
                 },
                 "last_name": {
+                    "type": "string"
+                },
+                "password": {
                     "type": "string"
                 }
             }
@@ -967,6 +1216,9 @@
                 "age": {
                     "type": "integer"
                 },
+                "email": {
+                    "type": "string"
+                },
                 "first_name": {
                     "type": "string"
                 },
@@ -979,6 +1231,9 @@
                 "last_name": {
                     "type": "string"
                 },
+                "password": {
+                    "type": "string"
+                },
                 "posts": {
                     "type": "array",
                     "items": {
@@ -986,6 +1241,21 @@
                     }
                 }
             }
+        },
+        "models.VerifyResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
